<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="410dp"
            android:layout_height="26dp"
            android:layout_marginStart="3dp"
            android:text="@string/enter_student_name"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_edit_text"
            android:layout_width="411dp"
            android:layout_height="76dp"
            android:layout_marginTop="261dp"
            android:hint="@string/enter_student" />

        <Button
            android:id="@+id/send_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:text="@string/send_student_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>