<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.StepActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/project_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:hint="@string/name_project" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text_input"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/name_description" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/step_text_view"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/step" />

                <Button
                    android:id="@+id/add_step_button"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_step_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/horizontal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="345dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/points_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>